[package]
name = "justlaunch"
version = "0.0.0"
authors = ["S Stewart <iamtheworst@programmer.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "~0.9.24"
zip = "0.5"
xdg = "^2.1"

[dependencies.clap]
version = "~2.33.0"
features = ["yaml", "color"]